# wpm-django

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yaml
wpm/: admin.py  apps.py  models.py  signals.py
wpm/locale/de/LC_MESSAGES/: django.po
wpm/locale/en/LC_MESSAGES/: django.po
wpm/migrations/: 0001_initial.py  0002_auto_20231001_1220.py  0003_peer_last_action.py  0004_auto_20231011_1703.py
wpm/services/: check_valid.py
wpm/static/admin/js/: wireguard_add_peer.js  wireguard_overview.js  wireguard_show_peer.js
