[metadata]
name = django-wpm
version = 0.1
description = A Django app to manage wireguard peers on wireguard capable routers.
long_description = file: README.md
url = https://github.com/secshellnet/wpm-django
author = Nico Felbinger
author_email = 26925347+felbinger@users.noreply.github.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    apscheduler >= 3.10
    requests >= 2.31.0
